--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  background-color: white; /* Background should be white */
+  color: black;
+  height: 100vh;
+}
+
+.content {
   padding: 2rem;
 }
 
